Remove mid-links. Move Linkedin link to right links.

--- a/style.css
+++ b/style.css
@@ -72,10 +72,11 @@ a {
     font-weight: bold;
 }
 
-.left-links{
-    margin-left: 15px;
+.right-links{
+    display: flex;
+    gap: 20px;
 }
 
-.right-links{
-    margin-right: 15px;
+a {
+    padding: 12px
 }
